--add btns in pages

--- a/app/dataholder/templates/projectlist.html
+++ b/app/dataholder/templates/projectlist.html
@@ -28,6 +28,7 @@
         <style>
             .bd-mode-toggle {
                 display: flex;
+                flex-direction: column;
                 gap: 10px;
             }
             #page-switcher {
@@ -131,7 +132,6 @@
                 </ul>
             </div>
         </div>
-
 
         <div class="container py-4">
             <form class="col-10 col-lg-10 mb-3 mx-auto" role="search">
