--- a/app/dataholder/templates/projectlist.html
+++ b/app/dataholder/templates/projectlist.html
@@ -170,6 +170,6 @@
         ></script>
         <script src="{% static 'js/scripts/pagination.js' %}?v=00004"></script>
         <script src="{% static 'js/scripts/theme-toggle.js' %}"></script>
-        <script src="{% static 'js/scripts/href-selector.js' %}"></script>
+        <script src="{% static 'js/scripts/href-list.js' %}?v=00001"></script>
     </body>
 </html>
