--- a/app/dataholder/templates/project.html
+++ b/app/dataholder/templates/project.html
@@ -86,6 +86,11 @@
                             Input Page
                         </button>
                     </li>
+                    <li>
+                        <button id="projectlistButton" type="button" class="dropdown-item d-flex align-items-center" data-page-value="checkout">
+                            Project List
+                        </button>
+                    </li>
                 </ul>
             </div>
 
@@ -543,6 +548,6 @@
         <script src="{% static 'js/scripts/reasons2.js' %}?v=00003"></script>
         <script src="{% static 'js/charts/radarchart2.js' %}"></script>
         <script src="{% static 'js/charts/horizontal2.js' %}"></script>
-        <script src="{% static 'js/scripts/href-selector.js' %}"></script>
+        <script src="{% static 'js/scripts/href-proj.js' %}"></script>
     </body>
 </html>
