--init conclusion bug fix

--- a/app/dataholder/templates/project.html
+++ b/app/dataholder/templates/project.html
@@ -531,9 +531,9 @@
             crossorigin="anonymous"
         ></script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-        <script src="{% static 'js/scripts/conclusion.js' %}"></script>
+        <script src="{% static 'js/scripts/conclusion.js' %}?v=00002"></script>
         <script src="{% static 'js/scripts/dataloader.js' %}"></script>
-        <script src="{% static 'js/scripts/reasons.js' %}?v=00004"></script>
+        <script src="{% static 'js/scripts/reasons.js' %}?v=00005"></script>
         <script src="{% static 'js/scripts/selector.js' %}?v=00001"></script>
         <script src="{% static 'js/scripts/theme-toggle.js' %}"></script>
         <script src="{% static 'js/charts/firstchart.js' %}"></script>
