--change radar charts

--- a/app/dataholder/templates/project.html
+++ b/app/dataholder/templates/project.html
@@ -539,14 +539,14 @@
         <script src="{% static 'js/charts/firstchart.js' %}"></script>
         <script src="{% static 'js/charts/donutchart.js' %}"></script>
         <script src="{% static 'js/charts/horizontal.js' %}?v=00002"></script>
-        <script src="{% static 'js/charts/radarchart.js' %}?v=00001"></script>
+        <script src="{% static 'js/charts/radarchart.js' %}?v=00003"></script>
         <script src="{% static 'js/charts/linechart.js' %}?v=00003"></script>
         <script src="{% static 'js/charts/linechart2.js' %}?v=00001"></script>
         <script src="{% static 'js/charts/modalchart1.js' %}?v=00002"></script>
         <script src="{% static 'js/charts/modalchart2.js' %}?v=00002"></script>
         <script src="{% static 'js/charts/donutchart2.js' %}?v=00001"></script>
         <script src="{% static 'js/scripts/reasons2.js' %}?v=00004"></script>
-        <script src="{% static 'js/charts/radarchart2.js' %}"></script>
+        <script src="{% static 'js/charts/radarchart2.js' %}?v=00002"></script>
         <script src="{% static 'js/charts/horizontal2.js' %}"></script>
         <script src="{% static 'js/scripts/href-proj.js' %}"></script>
     </body>
