--- a/app/dataholder/templates/standalone.html
+++ b/app/dataholder/templates/standalone.html
@@ -149,7 +149,7 @@
             <div class="space-y-24">
                 <div class="flex flex-col lg:flex-row items-center gap-12">
                     <div class="flex-1">
-                        <img src="/lovable-uploads/4a00ced4-e4d5-4dd5-8b38-455fcee6c0a3.png" alt="Комплексный анализ" class="rounded-lg shadow-lg w-full object-cover">
+                        <img src="{% static 'images/img1.png' %}" alt="Комплексный анализ" class="rounded-lg shadow-lg w-full object-cover">
                     </div>
                     <div class="flex-1 space-y-4">
                         <h3 class="text-3xl font-bold">Комплексный анализ данных</h3>
@@ -161,7 +161,7 @@
 
                 <div class="flex flex-col lg:flex-row-reverse items-center gap-12">
                     <div class="flex-1">
-                        <img src="/lovable-uploads/beb61a3e-fd8e-4525-8107-c2a68d490e54.png" alt="Мониторинг" class="rounded-lg shadow-lg w-full object-cover">
+                        <img src="{% static 'images/img2.png' %}" alt="Мониторинг" class="rounded-lg shadow-lg w-full object-cover">
                     </div>
                     <div class="flex-1 space-y-4">
                         <h3 class="text-3xl font-bold">Мониторинг и аналитика</h3>
