--- a/app/dataholder/templates/projectlist.html
+++ b/app/dataholder/templates/projectlist.html
@@ -154,8 +154,8 @@
         <footer class="pt-4 text-body-secondary text-center text-small">
             <p class="mb-1">&copy; 2025 StartupMLModel</p>
             <ul class="list-inline">
-                <li class="list-inline-item"><a href="#">Главная</a></li>
-                <li class="list-inline-item"><a href="#">Создать проект</a></li>
+                <li class="list-inline-item"><a href="http://localhost:8000">Главная</a></li>
+                <li class="list-inline-item"><a href="http://localhost:8000/checkout">Создать проект</a></li>
             </ul>
         </footer>
         <script
